# asek

./: .gitignore  CMakeLists.txt  LICENSE
include/: globals.hpp  index.hpp  search.hpp
src/: index.cpp  main.cpp  search.cpp
